--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,7 @@
     <footer>
 
             <p style="font-style: italic">HuyNDQ x PhucTH x LocQD x ThangTM</p>
-         <p>2022&copy; Thesis</p>
+         <p>2022&copy; FPT Thesis</p>
         </footer>
 </div>
 </body>
