--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,20 @@
         }
 
         body {
+            animation: fadeInAnimation ease 3s;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             font-size: 20px;
+        }
+
+        @keyframes fadeInAnimation {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
         }
 
         .container {
